--- a/modulos/modulo_juego.tex
+++ b/modulos/modulo_juego.tex
@@ -458,7 +458,7 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 		RemoverDeColas(j, e)\; %% NO AGREGO LA COMP PORQUE ESTO NO ESTA BIEN DEFINIDO TODAVIA
 	\end{algorithm}
 
-	\complejidad: $O()$
+	\complejidad: $O(log(EC))$
 
 	\justifcomp:
 
@@ -468,37 +468,18 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{RemoverDeColas}{\Inout{j}{pokego}, \In{e}{jugador}}{}}
 		coor: c $\leftarrow$ (*j.jugadores[e]).posicion\OdeLinea{1}
-		\For(\OdeBloque{\#posConPokemon}){$i \leftarrow 0$ \KwTo $2$}{
-			\For(\OdeBloque{\#posConPokemon}){$j \leftarrow 0$ \KwTo $2$}{
-				coor : ne $\leftarrow$ CrearCoor(Latitud(c) + i, Longitud(c) + j)\OdeLinea{1}
-				\If(\OdeBloque{\#posConPokemon}){DistEuclidea(c, ne) $\leq$ 4 \textbf{and} Pertenece(j.posConPokemons, ne}{
-					Borrar(j.grillaPos[Latitud(ne)][Longitud(ne)].jugEsperandoCaptura, e)\OdeLinea{1}
-				}
-				\If{Longitud(c) $>$ j}{
-					coor : no $\leftarrow$ CrearCoor(Latitud(c) + i, Longitud(c) - j)\OdeLinea{1}
-					\If(\OdeBloque{\#posConPokemon}){DistEuclidea(c, no) $\leq$ 4 \textbf{and} Pertenece(j.posConPokemons, no}{
-						Borrar(j.grillaPos[Latitud(no)][Longitud(no)].jugEsperandoCaptura, e)\OdeLinea{1}
-					}
-				}
 
-				\If{Latitud(c) $>$ i}{
-					coor : se $\leftarrow$ CrearCoor(Latitud(c) - i, Longitud(c) + j)\OdeLinea{1}
-					\If(\OdeBloque{\#posConPokemon}){DistEuclidea(c, se) $\leq$ 4 \textbf{and} Pertenece(j.posConPokemons, se}{
-						Borrar(j.grillaPos[Latitud(se)][Longitud(se)].jugEsperandoCaptura, e)\OdeLinea{1}
-					}
-				}
-
-				\If{Latitud(c) $>$ i \textbf{and} Longitud(c) $>$ j}{
-					coor : so $\leftarrow$ CrearCoor(Latitud(c) - i, Longitud(c) - j)\OdeLinea{1}
-					\If(\OdeBloque{\#posConPokemon}){DistEuclidea(c, so) $\leq$ 4 \textbf{and} Pertenece(j.posConPokemons, so}{
-						Borrar(j.grillaPos[Latitud(so)][Longitud(so)].jugEsperandoCaptura, e)\OdeLinea{1}
-					}
-				}
+		itBi(coor) : itCoor $\leftarrow$ CrearIt(j.posConPokemons)\OdeLinea{1}
+		\While(\OdeBloque{PS}){HaySiguiente(itCoor)}{
+			coor : siguiente $\leftarrow$ Siguiente(itCoor)\OdeLinea{1}
+			\If{DistEuclidea(c, siguiente) $\leq$ 4}{
+					Borrar(j.grillaPos[Latitud(siguiente)][Longitud(siguiente)].jugEsperandoCaptura, e)\OdeLinea{1}
 			}
+			Avanzar(itCoor)\OdeLinea{1}
 		}
 	\end{algorithm}
 
-	%% SI BIEN LA LIMPIE, ESTA FUNCION NO SIRVE EN SU ESTADO ACTUAL
+	%% ESTA FUNCION NO SIRVE EN SU ESTADO ACTUAL
 	\complejidad: $O()$
 
 	\justifcomp:
@@ -509,36 +490,17 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{AgregarAColas}{\Inout{j}{pokego}, \In{e}{jugador}}{}}
 		coor: c $\leftarrow$ (*j.jugadores[e]).posicion\;
-		nat : i $\leftarrow$ 0\;
-		\While{i $<$ 3}{
-			nat : j $\leftarrow$ 0\;
-			\While{j $<$ 3}{
-				\If{DistEuclidea(c, CrearCoor(Latitud(c) + i, Longitud(c) + j)) $\leq$ 4}{
-					\If{Pertenece(j.posConPokemons, CrearCoor(Latitud(c) + i, Longitud(c) + j)}{
-						Definir(j.grillaPos[Latitud(c) + i][Longitud(c) + j].jugEsperandoCaptura, e, (*j.jugadores[e]).cantPokemons)\;
-					}
-				} 
-				\If {DistEuclidea(c, CrearCoor(Latitud(c) + i, Longitud(c) - j)) $\leq$ 4}{
-					\If{Pertenece(j.posConPokemons, CrearCoor(Latitud(c) + i, Longitud(c) - j)}{
-						Definir(j.grillaPos[Latitud(c) + i][Longitud(c) - j].jugEsperandoCaptura, e, (*j.jugadores[e]).cantPokemons)\;
-					}
-				} 
-				\If {DistEuclidea(c, CrearCoor(Latitud(c) - i, Longitud(c) + j)) $\leq$ 4}{
-					\If{Pertenece(j.posConPokemons, CrearCoor(Latitud(c) - i, Longitud(c) + j)}{
-						Definir(j.grillaPos[Latitud(c) - i][Longitud(c) + j].jugEsperandoCaptura, e, (*j.jugadores[e]).cantPokemons)\;
-					}
-				} 
-				\If {DistEuclidea(c, CrearCoor(Latitud(c) - i, Longitud(c) - j)) $\leq$ 4}{
-					\If{Pertenece(j.posConPokemons, CrearCoor(Latitud(c) - i, Longitud(c) - j)}{
-						Definir(j.grillaPos[Latitud(c) - i][Longitud(c) - j].jugEsperandoCaptura, e, (*j.jugadores[e]).cantPokemons)\;
-					}
-				}
-			j $\leftarrow$ j+1\;	
-			}							
-		i $\leftarrow$ i+1\;
-		}	
+		itBi(coor) : itCoor $\leftarrow$ CrearIt(j.posConPokemons)\OdeLinea{1}
+		\While(\OdeBloque{PS}){HaySiguiente(itCoor)}{
+			coor : siguiente $\leftarrow$ Siguiente(itCoor)\OdeLinea{1}
+			\If{DistEuclidea(c, siguiente) $\leq$ 4}{
+				Definir(j.grillaPos[Latitud(siguiente)][Longitud(siguiente)].jugEsperandoCaptura, (*j.jugadores[e]).cantPokemons)\OdeLinea{1}
+			}
+			Avanzar(itCoor)\OdeLinea{1}
+		}
 	\end{algorithm}
 
+	%% SI BIEN LA LIMPIE, ESTA FUNCION NO SIRVE EN SU ESTADO ACTUAL
 	\complejidad: $O()$
 
 	\justifcomp:
@@ -571,10 +533,10 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 		\While(\OdeBloque{PS \times |P|}){HaySiguiente?(it)}{
 			coor: coorConPk $\leftarrow$ Siguiente(it)\OdeLinea{1}
 			\tcp{me fijo si es mas lejos que el rango de captura}
-			\If{DistEuclidea(c, coorConPk) $>$ 4}{
+			\eIf{DistEuclidea(c, coorConPk) $>$ 4}{
 				infoPos: posPk $\leftarrow$ j.grillaPos[Latitud(coorConPk)][Longitud(coorConPk)]\OdeLinea{1}
 				posPk.contadorCaptura $\leftarrow$ posPk.contadorCaptura +1\OdeLinea{1}
-				\If{posPk.contadorCaptura = 10}{ 
+				\eIf{posPk.contadorCaptura = 10}{ 
 					\tcp{--Captura--}
 					pokemon: pk $\leftarrow$ posPk.pokemon\OdeLinea{1}
 					jugador: captor $\leftarrow$ Menor(posPk.jugEsperandoCaptura)\OdeLinea{1}
@@ -585,8 +547,14 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 					}{
 						Definir((*j.jugadores[captor]).pokemonsCapturados, pk, 1)\OdeLinea{log(|P|)}
 					}
+					EliminarSiguiente(it)\OdeLinea{1}
 					AgregarAColas(captor, e)\; %% NO AGREGO LA COMP PORQUE ESTO NO ESTA BIEN DEFINIDO TODAVIA
+				}{
+					Avanzar(it)\OdeLinea{1}
 				}
+			}{
+				%% REINICIAR CONTADOR QUE CORRESPONDA
+				Avanzar(it)\OdeLinea{1}
 			}
 		}
 	\end{algorithm}
@@ -615,25 +583,9 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
-		\caption{\algoritmo{iJugadores}{\In{j}{pokego}}{itJugadores}}
-		res $\leftarrow$ CrearIt(j, false)\OdeLinea{1}
-	\end{algorithm}
-
-	\complejidad: $O(1)$
-
-	\justifcomp: solo se inicializa el iterador. 
-
-	~
-
-	\begin{algorithm}[H]
-		\NoCaptionOfAlgo
 		\caption{\algoritmo{iEstaConectado}{\In{j}{pokego}, \In{e}{jugador}}{bool}}
 		res $\leftarrow$ (*j.jugadores[e]).conectado?\OdeLinea{1}
 	\end{algorithm}
-
-	\complejidad: $O(1)$
-
-	\justifcomp: solo se accede a un vector y se desreferencia un puntero.
 
 	~
 
@@ -667,9 +619,13 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 		res $\leftarrow$ CrearIterador((*j.jugadores[e]).pokemonsCapturados)\OdeLinea{1}
 	\end{algorithm}
 
-	\complejidad: $O(1)$
+	~
 
-	\justifcomp: solo se inicializa el iterador.
+	\begin{algorithm}[H]
+		\NoCaptionOfAlgo
+		\caption{\algoritmo{iJugadores}{\In{j}{pokego}}{itJugadores}}
+		res $\leftarrow$ CrearIt(j, false)\OdeLinea{1}
+	\end{algorithm}
 
 	~
 
@@ -693,7 +649,7 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 
 	\complejidad: $O(1)$
 
-	\justifcomp: solo se retorna el conjunto por referencia.
+	\justifcomp: solo se devuelve el conjunto por referencia.
 
 	~
 
@@ -712,113 +668,52 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{iPuedoAgregarPokémon}{\In{j}{pokego}, \In{c}{coor}}{bool}}
-		res $\leftarrow$ PosExistente(j, c) \textbf{and} HayPokémonEnDistancia(j, c, 25)\;
+		res $\leftarrow$ PosExistente(j.mapa, c) \textbf{and} HayPokémonEnDistancia(j, c, 25)\OdeLinea{PS}
 	\end{algorithm}
-
-	\complejidad: $O()$
-
-	\justifcomp:
-
 
 	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{HayPokémonEnDistancia}{\In{j}{pokego}, \In{c}{coor}, \In{n}{nat}}{bool}}
-		res $\leftarrow$ false\;
-		nat : i $\leftarrow$ 0\;
-		\While{i $<$ n + 1}{
-			nat : j $\leftarrow$ 0\;
-			\While{j $<$ n + 1}{
-				nat : j $\leftarrow$ 0\;
-				\If{DistEuclidea(c, CrearCoor(Latitud(c) + i, Longitud(c) + j)) $\leq$ n}{
-					\If{Pertenece(j.posConPokemons, CrearCoor(Latitud(c) + i, Longitud(c) + j)}{
-						res $\leftarrow$ true\;
-						\textbf{return}\;
-					}
-				} 
-				\If {DistEuclidea(c, CrearCoor(Latitud(c) + i, Longitud(c) - j)) $\leq$ n}{
-					\If{Pertenece(j.posConPokemons, CrearCoor(Latitud(c) + i, Longitud(c) - j)}{
-						res $\leftarrow$ true\;
-						\textbf{return}\;
-					}
-				} 
-				\If {DistEuclidea(c, CrearCoor(Latitud(c) - i, Longitud(c) + j)) $\leq$ n}{
-					\If{Pertenece(j.posConPokemons, CrearCoor(Latitud(c) - i, Longitud(c) + j)}{
-						res $\leftarrow$ true\;
-						\textbf{return}\;
-					}
-				} 
-				\If {DistEuclidea(c, CrearCoor(Latitud(c) - i, Longitud(c) - j)) $\leq$ n}{
-						\If{Pertenece(j.posConPokemons, CrearCoor(Latitud(c) - i, Longitud(c) - j)}{
-							res $\leftarrow$ true\;
-							\textbf{return}\;
-					}
-				}
-			j $\leftarrow$ j+1\;	
-			}							
-		i $\leftarrow$ i+1\;
+		res $\leftarrow$ false\OdeBloque{1}
+		itBi(coor) : itCoor $\leftarrow$ CrearIt(j.posConPokemons)\OdeLinea{1}
+		\While(\OdeBloque{PS}){HaySiguiente(itCoor)}{
+			coor : siguiente $\leftarrow$ Siguiente(itCoor)\OdeLinea{1}
+			\If{DistEuclidea(c, siguiente) $\leq$ n}{
+				res $\leftarrow$ true\OdeLinea{1}
+			}
+			Avanzar(itCoor)\OdeLinea{1}
 		}
 	\end{algorithm}
-
-	\complejidad: $O()$
-
-	\justifcomp:
 
 	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{iHayPokémonCercano}{\In{j}{pokego}, \In{c}{coor}}{bool}}
-		res $\leftarrow$ HayPokémonEnDistancia(j, c, 4)\;
+		res $\leftarrow$ HayPokémonEnDistancia(j, c, 4)\OdeLinea{PS}
 	\end{algorithm}
-
-	\complejidad: $O()$
-
-	\justifcomp:
 
 	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{iPosPokémonCercano}{\In{j}{pokego}, \In{c}{coor}}{coor}}
-		nat : i $\leftarrow$ 0\;
-		\While{i $<$ 3}{
-			nat : j $\leftarrow$ 0\;
-			\While{j $<$ 3}{
-			\If{DistEuclidea(c, CrearCoor(Latitud(c) + i, Longitud(c) + j)) $\leq$ 4}{
-				\If{Pertenece(j.posConPokemons, CrearCoor(Latitud(c) + i, Longitud(c) + j)}{
-					res $\leftarrow$ d\;
-					\textbf{return}\;
-				}
-			} 
-			\If {DistEuclidea(c, CrearCoor(Latitud(c) + i, Longitud(c) - j)) $\leq$ 4}{
-				\If{Pertenece(j.posConPokemons, CrearCoor(Latitud(c) + i, Longitud(c) - j)}{
-					res $\leftarrow$ d\;
-					\textbf{return}\;
-				}
-			} 
-			\If {DistEuclidea(c, CrearCoor(Latitud(c) - i, Longitud(c) + j)) $\leq$ 4}{
-				\If{Pertenece(j.posConPokemons, CrearCoor(Latitud(c) - i, Longitud(c) + j)}{
-					res $\leftarrow$ d\;
-					\textbf{return}\;
-				}
-			} 
-			\If {DistEuclidea(c, CrearCoor(Latitud(c) - i, Longitud(c) - j)) $\leq$ 4}{
-					\If{Pertenece(j.posConPokemons, CrearCoor(Latitud(c) - i, Longitud(c) - j)}{
-						res $\leftarrow$ d\;
-						\textbf{return}\;
-					}
-				}
-			j $\leftarrow$ j+1\;	
-			}							
-		i $\leftarrow$ i+1\;
-		}	
+
+		itBi(coor) : itCoor $\leftarrow$ CrearIt(j.posConPokemons)\OdeLinea{1}
+		\While(\OdeBloque{PS}){HaySiguiente(itCoor)}{
+			coor : siguiente $\leftarrow$ Siguiente(itCoor)\OdeLinea{1}
+			\If{DistEuclidea(c, siguiente) $\leq$ n}{
+				res $\leftarrow$ siguiente\;
+			}
+			Avanzar(itCoor)\OdeLinea{1}
+		}
 	\end{algorithm}
 
-	\complejidad: $O()$
+	\complejidad: $O(PS)$
 
-	\justifcomp:
+	\justifcomp: debe iterar todas las posiciones donde hay un pokémon.
 
 	~
 
@@ -828,34 +723,34 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 		res $\leftarrow$ Claves(j.grillaPos[Latitud(c)][Longitud(c)].jugEsperandoCaptura)
 	\end{algorithm}
 
-	\complejidad: $O()$
+	\complejidad: $O(EC)$
 
-	\justifcomp:
+	\justifcomp: el diccionario debe recuperar las claves iterando.
 
 	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{iIndiceRareza}{\In{j}{pokego}, \In{pk}{pokemon}}{nat}}
-		nat : cantPk $\leftarrow$ Obtener(j.pokemones, pk)\;
-		res $\leftarrow$ 100 - (cantPk $\times$ 100 $\div$ j.cantPokemons)\;
+		nat : cantPk $\leftarrow$ CantMismaEspecie(j, pk)\OdeLinea{|P|}
+		res $\leftarrow$ 100 - (cantPk $\times$ 100 $\div$ j.cantPokemons)\OdeLinea{1}
 	\end{algorithm}
 
-	\complejidad: $O()$
+	\complejidad: $O(|P|)$
 
-	\justifcomp:
+	\justifcomp: se debe acceder al diccionario para averiguar cuántos pokemons de esa especie.
 
 	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{iCantPokémonsTotales}{\In{j}{pokego}}{nat}}
-		res $\leftarrow$ j.cantPokemons\;
+		res $\leftarrow$ j.cantPokemons\OdeLinea{1}
 	\end{algorithm}
 
-	\complejidad: $O()$
+	\complejidad: $O(1)$
 
-	\justifcomp:
+	\justifcomp: solo se retorna un valor almacenado.
 
 	~
 
@@ -867,7 +762,7 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 
 	\complejidad: $O()$
 
-	\justifcomp:
+	\justifcomp: se debe acceder al diccionario para averiguar cuántos pokemons de esa especie.
 
 
 	\TituloDis{Algorítmos del iterador}
